@@ -2,9 +2,11 @@ FOF 3.1.0
 ================================================================================
 ! Joomla! 3.7 has a broken System - Page Cache plugin which leads to white pages
 + Abstraction of session get/set variables in the Platform
++ You can add external CSS and JS files through the View and Template packages
 
 Backwards compatibility notes:
 
+* PHP 5.3 no longer supported. The minimum supported version of PHP is now 5.4.0. Some features may require PHP 5.5+.
 * If you use a custom Platform class which doesn't extend FOF30\Platform\Joomla\Platform you will need to implement the
   new methods from the PlatformInterface. This is a potential b/c break. We're willing to take the bet and not call this
   FOF 4.0 since we've not yet heard of anyone using their custom platform. This is not exactly SemVer but hey, it's not
